rinse (1.8-1) unstable; urgency=low

  * centos-5.packages: add missing lib (closes: #623387)

 -- Thomas Lange <lange@debian.org>  Sun, 01 May 2011 13:16:51 +0200

rinse (1.7-2) unstable; urgency=high

  * Install a modprobe.conf when possible.
    (Closes: #588030)

 -- Steve Kemp <skx@debian.org>  Fri, 27 Aug 2010 22:11:22 +0000

rinse (1.7-1) unstable; urgency=low

  * Added missing packages so that Centos 5.x will install.
    (Closes: #524486)
  * Avoid hardwired mirrors in the post-install scripts.

 -- Steve Kemp <skx@debian.org>  Tue, 21 Apr 2009 19:18:17 -0000

rinse (1.6-1) unstable; urgency=low

  * Add support for openSuSE 10.1-11.1

 -- Thayne Harbaugh <thayne_atsymbol_fusionio_com>  Fri, 06 Mar 2009 16:35:42 -0700

rinse (1.5-1) unstable; urgency=medium

  * Added support for Fedora Core 10

 -- Steve Kemp <skx@debian.org>  Sat, 20 Dec 2008 23:00:32 +0000

rinse (1.4-1) unstable; urgency=medium

  * Add the new command line flag "--add-pkg-list".  Patch from
    Roberto Suarez Soto.

 -- Steve Kemp <skx@debian.org>  Sun, 16 Nov 2008 14:00:41 +0000

rinse (1.3-2) unstable; urgency=medium

  * Removed several "bashisms" from our scripts
    - Thanks for Ubuntu for the patch / feedback.
    (Closes: #488356)

 -- Steve Kemp <skx@debian.org>  Fri, 27 Jun 2008 15:44:51 +0000

rinse (1.3-1) unstable; urgency=medium

  * New upstream release.
    - Add support for the first release of Fedora Core 9.
  * Updated to standards version 3.8.0.
    - No changes

 -- Steve Kemp <skx@debian.org>  Fri, 27 Jun 2008 15:44:51 +0000

rinse (1.2-1) unstable; urgency=medium

  * New upstream release.
    - Support Fedora Core 9 test preview.
    - Better caching for FC-8
    - Code ran through spellchecker + pretty formatter

 -- Steve Kemp <skx@debian.org>  Wed, 7 May 2008 18:33:33 +0000

rinse (1.1-1) unstable; urgency=medium

  * New upstream release.
    - Updated handling of Centos5.

 -- Steve Kemp <skx@debian.org>  Sat, 30 Apr 2008 18:44:44 +0000
